--- a/app/templates/views/404.hbs
+++ b/app/templates/views/404.hbs
@@ -1,3 +1,3 @@
 <div class="splash ui center aligned text container">
-    <h1 class="ui header">hodavidhara</h1>
+    <h1 class="ui header">404</h1>
 </div>
