--- a/app/templates/partials/scripts.hbs
+++ b/app/templates/partials/scripts.hbs
@@ -1,2 +1,2 @@
-<script src="lib/jquery.js" type="text/javascript"></script>
-<script src="lib/semantic.js" type="text/javascript"></script>
+<script src="lib/jquery.min.js" type="text/javascript"></script>
+<script src="lib/semantic.min.js" type="text/javascript"></script>
