--- a/app/templates/layouts/main.hbs
+++ b/app/templates/layouts/main.hbs
@@ -8,12 +8,12 @@
 <body>
 <div class="ui two column grid">
 
-    <div class="ui fourteen wide column">
+    <main class="ui fourteen wide column">
         {{{@body}}}
-    </div>
-    <div class="ui two wide column">
+    </main>
+    <nav class="ui two wide column">
         {{> nav}}
-    </div>
+    </nav>
 </div>
 </body>
 </html>
