--- a/app/templates/views/projects.hbs
+++ b/app/templates/views/projects.hbs
@@ -1,3 +1,4 @@
-<div>
-    project
+<div class="ui center aligned container">
+    <div class="ui huge header">Projects</div>
+    <div id="projects"></div>
 </div>
