--- a/app/templates/partials/scripts.hbs
+++ b/app/templates/partials/scripts.hbs
@@ -1,2 +1,6 @@
 <script src="lib/jquery.min.js" type="text/javascript"></script>
 <script src="lib/semantic.min.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
+
+<!-- TODO: make this better -->
+<script src="js/{{@view}}.js" type="text/javascript"></script>
