--- a/app/static/style/main.less
+++ b/app/static/style/main.less
@@ -1,8 +1,9 @@
-@brand-font-family: 'Poiret One', cursive;
+@brand-font-family: 'Lato', sans-serif;
 @brand-font-color: #444;
 
 * {
   font-family: @brand-font-family !important;
+  font-weight: normal !important;
 }
 
 body {
