--- a/app/templates/partials/styles.hbs
+++ b/app/templates/partials/styles.hbs
@@ -1,3 +1,3 @@
-<link href="//fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <link href="lib/semantic.min.css" type="text/css" rel="stylesheet" />
 <link href="style/main.css" type="text/css" rel="stylesheet" />
