swapping out semantic-ui for purecss and making more mobile friendly

--- a/app/static/js/hodavidhara/templates/projectcard.hbs
+++ b/app/static/js/hodavidhara/templates/projectcard.hbs
@@ -1,7 +1,7 @@
-<a href="{{html_url}}" class="project-card ui teal fluid card">
-    <div class="ui left aligned content">
-        <div class="ui large header">{{name}}</div>
+<a href="{{html_url}}" class="project-card card">
+    <div class="content">
+        <div class="title">{{name}}</div>
         <span>{{description}}</span>
-        <span class="right floated">Latest commit: {{dateFormat pushed_at}}</span>
+        <span class="right">Latest commit: {{dateFormat pushed_at}}</span>
     </div>
 </a>
