--- a/app/templates/partials/nav.hbs
+++ b/app/templates/partials/nav.hbs
@@ -1,6 +1,10 @@
-<div class="ui right fixed vertical menu">
-    <div class="ui center aligned container">
-        <a class="item" href="/"><h2 class="ui header">Home</h2></a>
-        <a class="item" href="/projects"><h2 class="ui header">Projects</h2></a>
-    </div>
+<div class="icon">
+    <i class="fa fa-bars"></i>
+</div>
+<div class="overlay"></div>
+<div class="pure-menu menu">
+    <ul class="pure-menu-list">
+        <li class="pure-menu-item"><a class="pure-menu-link" href="/">Home</a> </li>
+        <li class="pure-menu-item"><a class="pure-menu-link" href="/projects">Projects</a> </li>
+    </ul>
 </div>
