--- a/app/templates/partials/styles.hbs
+++ b/app/templates/partials/styles.hbs
@@ -1,3 +1,4 @@
-<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-<link href="lib/semantic.min.css" type="text/css" rel="stylesheet" />
+<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+<link href="libs/pure/pure-min.css" type="text/css" rel="stylesheet" />
+<link href="libs/font-awesome/css/font-awesome.min.css" type="text/css" rel="stylesheet" />
 <link href="style/main.css" type="text/css" rel="stylesheet" />
