--- a/app/templates/views/index.hbs
+++ b/app/templates/views/index.hbs
@@ -1,3 +1,3 @@
-<div class="splash ui center aligned text container">
-    <h1 class="ui header">hodavidhara</h1>
+<div class="splash">
+    <h1 class="header">hodavidhara</h1>
 </div>
