--- a/app/templates/layouts/main.hbs
+++ b/app/templates/layouts/main.hbs
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {{> styles}}
     {{> scripts}}
     <title>hodavidhara</title>
 </head>
 <body>
-<div class="ui two column grid">
-
-    <main class="ui fourteen wide column">
-        {{{@body}}}
-    </main>
-    <nav class="ui two wide column">
-        {{> nav}}
-    </nav>
+<div id="nav">
+    {{> nav}}
+</div>
+<div class="main">
+    {{{@body}}}
 </div>
 </body>
 </html>
