--- a/app/templates/views/projects.hbs
+++ b/app/templates/views/projects.hbs
@@ -1,4 +1,2 @@
-<div class="ui center aligned container">
-    <div class="ui huge header">Projects</div>
-    <div id="projects"></div>
-</div>
+<div class="header"><h1>Projects</h1></div>
+<div class="content" id="projects"></div>
